# fullstack-chatbot-vibeCoding-demo

./: .gitattributes  .gitignore  FEATURES_GUIDE.md  GIT_SETUP_SUMMARY.md  HISTORY_FEATURE.md  MONGODB_MIGRATION.md  README.md  SETUP.md  check-git.sh
backend/: README.md  env.example  package.json  tsconfig.app.json
backend-fastapi/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  start.py
backend-fastapi/app/: config.py  main.py
backend-fastapi/app/chatbot/: router.py  service.py
backend-fastapi/app/database/: connection.py
backend-fastapi/app/models/: message.py
backend-fastapi/app/schemas/: message.py
backend-fastapi/app/utils/: openai_client.py
backend-fastapi/tests/: test_chatbot.py
backend/src/: app.module.ts  main.ts
backend/src/chatbot/: chatbot.controller.ts  chatbot.module.ts  chatbot.routes.ts  chatbot.service.ts
database/: mongodb-setup.md
frontend/: README.md  index.html  package.json  tsconfig.app.json
frontend-nextjs/: .gitignore  INDEX.md  MIGRATION_GUIDE.md  PROJECT_COMPARISON.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SSR_CSR_COMPARISON.md  next.config.js  package.json
frontend-nextjs/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/components/: ChatbotPageClient.tsx  Footer.tsx  Header.css  Header.tsx  chatbot-page.css  chatbot-page.tsx  chatbot.component.css  chatbot.component.tsx  conversation-history.component.css  conversation-history.component.tsx
frontend-nextjs/lib/: api.ts
frontend/src/: App.css  App.tsx  index.css
(+7 files in other folders)
